[gd_scene load_steps=4 format=2]

[ext_resource path="res://Maps/InteractiveArena.tscn" type="PackedScene" id=1]
[ext_resource path="res://Maps/VisualizerArena.gd" type="Script" id=2]
[ext_resource path="res://Maps/Util/DrawActions.tscn" type="PackedScene" id=3]

[node name="VisualizerArena" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="DrawActions" parent="CanvasLayer" index="0" instance=ExtResource( 3 )]

[node name="SelfLife" type="SpinBox" parent="CanvasLayer/MarginContainer/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 120.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 30.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="SelfMovement" type="OptionButton" parent="CanvasLayer/MarginContainer/VBoxContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 179.0
margin_right = 120.0
margin_bottom = 199.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
clip_text = true
align = 0
items = [  ]
selected = -1

[node name="SelfDirection" type="OptionButton" parent="CanvasLayer/MarginContainer/VBoxContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 214.0
margin_right = 120.0
margin_bottom = 234.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
clip_text = true
align = 0
items = [  ]
selected = -1

[node name="EnemyLife" type="SpinBox" parent="CanvasLayer/MarginContainer/VBoxContainer" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 249.0
margin_right = 120.0
margin_bottom = 273.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 30.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="EnemyMovement" type="OptionButton" parent="CanvasLayer/MarginContainer/VBoxContainer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 288.0
margin_right = 120.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
clip_text = true
align = 0
items = [  ]
selected = -1

[node name="EnemyDirection" type="OptionButton" parent="CanvasLayer/MarginContainer/VBoxContainer" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 323.0
margin_right = 120.0
margin_bottom = 343.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
clip_text = true
align = 0
items = [  ]
selected = -1

[node name="Refresh" parent="CanvasLayer/MarginContainer/VBoxContainer" index="10"]

margin_top = 358.0
margin_bottom = 378.0

[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/SelfLife" to="." method="_on_SelfLife_value_changed"]

[connection signal="item_selected" from="CanvasLayer/MarginContainer/VBoxContainer/SelfMovement" to="." method="_on_SelfMovement_item_selected"]

[connection signal="item_selected" from="CanvasLayer/MarginContainer/VBoxContainer/SelfDirection" to="." method="_on_SelfDirection_item_selected"]

[connection signal="value_changed" from="CanvasLayer/MarginContainer/VBoxContainer/EnemyLife" to="." method="_on_EnemyLife_value_changed"]

[connection signal="item_selected" from="CanvasLayer/MarginContainer/VBoxContainer/EnemyMovement" to="." method="_on_EnemyMovement_item_selected"]

[connection signal="item_selected" from="CanvasLayer/MarginContainer/VBoxContainer/EnemyDirection" to="." method="_on_EnemyDirection_item_selected"]


